2008-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ColorizeImage): Re-implement using pixel iterators.
	(MorphImages): Re-implement using pixel iterators.

2008-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ConvolveImage): Accelerate using OpenMP.
	* magick/effect.c (AdaptiveThresholdImage): Accelerate using OpenMP.

2008-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c: Exhuastive study of the pixel cache code
	reveals that it is inscrutable and not implemented in a fashion
	which enables useful multi-threading.  Therefore, the cache view
	interfaces are now made OpenMP-safe via a global critical section.

2008-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_iterator.c: Reduce use of critical sections around
	pixel cache to the bare minimum based on analysis and testing.
	Unfortunately, testing shows that the pixel cache views are still
	not 100% thread safe so the extra locking is still required.
	* magick/pixel_cache.c (ModifyCache): Make implementation thread
	safe.  This required removing a thread-unsafe optimization from
	Bill Radcliffe.
	* magick/command.c (BenchmarkImageCommand): Restore original
	client name for each loop so that it is not extended further for
	each iteration.
	* magick/semaphore.c (UnlockSemaphoreInfo): Decrement lock depth
	under protection of the lock.

2008-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (AddNoiseImagePixels): Update to pass per-thread
	'seed' value for more performance.

2008-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (GenerateDifferentialNoise): Use
	MagickRandReentrant(). Added a 'seed' argument so that we can pass
	a per-thread 'seed' value.
	* magick/utility.c (MagickRandNewSeed): New function to produce a
	semi-random 'seed' value.
	(MagickRandReentrant): New function which works like rand() but