@@ -26,6 +26,7 @@
 <UL>
   <LI> magick/fx.c (ColorizeImage): Re-implement using pixel iterators.
         (MorphImages): Re-implement using pixel iterators.
+        (OilPaintImage): Accelerate using OpenMP.
 
 </UL>
 <p>
