@@ -324,6 +324,7 @@ had stopped working.</li>
 <li>Morph image (-morph)</li>
 <li>Negate image (-negate)</li>
 <li>Normalize image (-normalize)</li>
+<li>Oil Paint (-paint)</li>
 <li>Operators (-operator)</li>
 <li>Profile adjust (ICC) (-profile)</li>
 <li>Resize image (-resize)</li>
@@ -1035,7 +1036,7 @@ package; otherwise see <a class="reference" href="http://www.graphicsmagick.org/
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2008-09-07 18:49 UTC.
+Generated on: 2008-09-07 20:06 UTC.
 
 </div>
 </body>
