@@ -99,6 +99,7 @@ Performance Improvements:
     - Morph image (-morph)
     - Negate image (-negate)
     - Normalize image (-normalize)
+    - Oil Paint (-paint)
     - Operators (-operator)
     - Profile adjust (ICC) (-profile)
     - Resize image (-resize)
